# hyped-2024

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CODEOWNERS  Dockerfile  Doxyfile  F767ZI.ld  README.md  build.sh  devenv.sh  docker.sh  entry.sh  test.py
.github/workflows/: build.yml  lint.yml  telemetry-build.yml  telemetry-lint.yml  telemetry.yml
cc/: Dockerfile.crosscompile
cmake/: FindCMSIS.cmake  FindHAL.cmake  stm32_gcc.cmake
cmake/stm32/: c0.cmake  common.cmake  f0.cmake  f1.cmake  f2.cmake  f3.cmake  f4.cmake
config/: debug.toml  pod.toml  pod_ness.toml  template.json
docker/: Dockerfile  build.sh  entry.sh
lib/: CMakeCache.txt  CMakeLists.txt
lib/core/: CMakeLists.txt  config.cpp  config.hpp  health_monitor.cpp  health_monitor.hpp  host_information.cpp  host_information.hpp  logger.cpp  logger.hpp  mqtt.cpp  mqtt.hpp  mqtt_logger.cpp  mqtt_logger.hpp  mqtt_message.hpp  mqtt_topics.hpp  scheduler.cpp  scheduler.hpp  time.hpp  timer.cpp  timer.hpp  types.hpp  wall_clock.cpp  wall_clock.hpp
lib/debug/: CMakeLists.txt  repl.cpp  repl.hpp  repl_logger.cpp  repl_logger.hpp  terminal.hpp
lib/debug/commands/: AdcCommands.cpp  AdcCommands.hpp  CanCommands.cpp  CanCommands.hpp  GpioCommands.cpp  GpioCommands.hpp  ICommand.hpp  accelerometer_commands.cpp  accelerometer_commands.hpp  adc_commands.cpp  adc_commands.hpp  can_commands.cpp  can_commands.hpp  command.hpp  gpio_commands.cpp  gpio_commands.hpp  i2c_commands.cpp  i2c_commands.hpp  inverter_current_commands.cpp  inverter_current_commands.hpp  inverter_temperature_commands.cpp  inverter_temperature_commands.hpp  keyence_commands.cpp  keyence_commands.hpp  low_power_bms_commands.cpp  low_power_bms_commands.hpp  optical_flow_commands.cpp  optical_flow_commands.hpp  pwm_commands.cpp  pwm_commands.hpp  some_sensors_commands.cpp  some_sensors_commands.hpp  spi_commands.cpp  spi_commands.hpp  temperature_commands.cpp  temperature_commands.hpp  test_commands.cpp  test_commands.hpp  uart_commands.cpp  uart_commands.hpp
lib/io/: CMakeLists.txt  adc.hpp  can.hpp  gpio.hpp  hardware_adc.cpp  hardware_adc.hpp  hardware_can.cpp  hardware_can.hpp  hardware_gpio.cpp  hardware_gpio.hpp  hardware_i2c.cpp  hardware_i2c.hpp  hardware_spi.cpp  hardware_spi.hpp  hardware_uart.cpp  hardware_uart.hpp  i2c.hpp  mock_hardware_i2c.cpp  mock_hardware_i2c.hpp  nucleo_i2c.cpp  nucleo_i2c.hpp  pwm.cpp  pwm.hpp  spi.hpp  uart.hpp
lib/motors/: CMakeLists.txt  PID.cpp  PID.hpp  can_messages.cpp  can_messages.hpp  can_processor.cpp  can_processor.hpp  constant_frequency_calculator.cpp  constant_frequency_calculator.hpp  controller.cpp  controller.hpp  frequency_calculator.hpp  main.cpp  main.hpp  message_formatting.cpp  message_formatting.hpp  pid_control.cpp  pid_controller.cpp  pid_controller.hpp  state_processor.cpp  state_processor.hpp  time_frequency_calculator.cpp  time_frequency_calculator.hpp  vector_controller.cpp  vector_controller.hpp  velocity_frequency_calculator.cpp  velocity_frequency_calculator.hpp
lib/motors/config/: coefficients.json  messages.json  time_frequency.json
lib/navigation/: CMakeLists.txt
lib/navigation/control/: CMakeLists.txt  consts.hpp  crosscheck.cpp  crosscheck.hpp  kalman_matrices.hpp  navigator.cpp  navigator.hpp
lib/navigation/filtering/: CMakeLists.txt  extended_kalman_filter.cpp  extended_kalman_filter.hpp  kalman_filter.cpp  kalman_filter.hpp  kalman_matrices.cpp  kalman_matrices.hpp  running_means_filter.cpp  running_means_filter.hpp
lib/sensors/: CMakeLists.txt  HPRelay.hpp  HP_Relay.cpp  HP_Relay.hpp  Relay.cpp  Relay.hpp  accelerometer.cpp  accelerometer.hpp  accelerometer_node.cpp  accelerometer_node.hpp  adc_mux.hpp  adc_sensors.hpp  bms.cpp  bms.hpp  brakes.cpp  brakes.hpp  high_power_relay.cpp  high_power_relay.hpp  i2c_converter.cpp  i2c_converter.hpp  i2c_mux.cpp  i2c_mux.hpp  i2c_sensors.hpp  inverter_current.cpp  inverter_current.hpp  inverter_temperature.cpp  inverter_temperature.hpp  keyence.cpp  keyence.hpp  keyence_node.cpp  keyence_node.hpp  led_driver.cpp  led_driver.hpp  low_power_bms.cpp  low_power_bms.hpp  low_power_current.cpp  low_power_current.hpp  optical_flow.cpp  optical_flow.hpp  optical_flow.py  (+9 more)
lib/state_machine/: CMakeLists.txt  message.hpp  state.hpp  state_machine.cpp  state_machine.hpp  transition_table.hpp  types.hpp
lib/telemetry/: latency.cpp  latency.hpp
lib/utils/: CMakeLists.txt  dummy_adc.cpp  dummy_adc.hpp  dummy_gpio.cpp  dummy_gpio.hpp  dummy_i2c.cpp  dummy_i2c.hpp  dummy_i2c_sensor.cpp  dummy_i2c_sensor.hpp  dummy_logger.cpp  dummy_logger.hpp  dummy_mqtt.cpp  dummy_mqtt.hpp  dummy_spi.cpp  dummy_spi.hpp  dummy_uart.cpp  dummy_uart.hpp  kalman_higher_derivatives.cpp  kalman_higher_derivatives.hpp  manual_time.cpp  manual_time.hpp  (+2 more)
scripts/: format.sh  setup
src/: CMakeLists.txt
src/debugger/: CMakeLists.txt  main.cpp
src/stm32_blinky/: CMakeLists.txt  blinky.cpp  stm32f4xx_hal_conf.h  stm32f4xx_hal_conf.hpp
src/stm32_blinky/cmake/: FindBSP.cmake  FindCMSIS.cmake  FindHAL.cmake  stm32_gcc.cmake
src/stm32_blinky/cmake/stm32/: common.cmake  devices.cmake  f4.cmake  f7.cmake  linker_ld.cmake  utilities.cmake
stm32_linkers/: F401RE.ld
telemetry/: .dockerignore  .env.docker  .env.example  .gitignore  .prettierrc  Dockerfile  build.sh  docker-compose.mqtt.yml  docker-compose.yml  docker.sh  entry.sh  package-lock.json  package.json  pnpm-lock.yaml  telemetry.sh  test.js  turbo.json
test/: CMakeLists.txt
test/core/: CMakeLists.txt  health_monitor.cpp  libraries.cpp  logger.cpp  mqtt_logger.cpp  scheduler.cpp
test/motors/: CMakeLists.txt  can_processor.cpp  pid_test.cpp
test/navigation/: CMakeLists.txt  accelerometer_preprocessing.cpp  data_gen.hpp  kalman_filter.cpp  navigation.cpp  preprocess_encoders.cpp
test/sensors/: CMakeLists.txt  i2c_mux.cpp  keyence.cpp
test/state_machine/: CMakeLists.txt  stm_tests.cpp
test/utils/: CMakeLists.txt  dummy_adc.cpp  dummy_gpio.cpp  dummy_i2c.cpp  dummy_i2c_sensor.cpp  dummy_spi.cpp  dummy_uart.cpp  manual_time.cpp  naive_navigator.cpp
(+41 files in other folders)
